--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/highlight.js": "^9.12.4",
 		"svelte": "^4.2.7",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"highlight.js": "^11.10.0",
+		"iconify-icon": "^2.1.0",
+		"pocketbase": "^0.21.5"
+	}
 }
